--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@dfinity/agent": "^0.19.3",
     "@dfinity/candid": "^0.19.3",
+    "@dfinity/identity": "^0.19.3",
     "@dfinity/principal": "^0.19.3"
   },
   "devDependencies": {
